test/hep/expr/compile1.out
Traceback (most recent call last):
  File "compile1.py", line 84, in ?
    compiled = hep.expr.asExpression(
  File "/home/samuel/dev/pyhep/py/hep/expr/__init__.py", line 67, in asExpression
    raise expr_parser.ParseError, \
hep.expr.expr_parser.ParseError: unknown symbol testlist_gexp, while parsing "(f1 == f2) and (i1 == i2)"
